# lib/api-spec/openapi.yaml
@@ -277,6 +277,21 @@ components:
       required:
         - employee_id
 
+    EasyTeamIds:
+      type: object
+      description: EasyTeam internal UUIDs returned after token exchange
+      properties:
+        employeeId:
+          type: string
+        locationId:
+          type: string
+        organizationId:
+          type: string
+      required:
+        - employeeId
+        - locationId
+        - organizationId
+
     GenerateTokenResponse:
       type: object
       properties:
@@ -286,6 +301,8 @@ components:
           type: boolean
         error:
           type: string
+        et:
+          $ref: "#/components/schemas/EasyTeamIds"
       required:
         - success
 
